--- a/solace/values-examples/prod1k-persist-ha-provisionPvc.yaml
+++ b/solace/values-examples/prod1k-persist-ha-provisionPvc.yaml
@@ -62,10 +62,11 @@ service:
       protocol: TCP
 storage:
   persistent: true
-# For best performance set type:fast size:500Gi and fsType:xfs
+# For a supported cloudProvider, set
+#  type: standard
+#  For best performance set type:fast size:500Gi and fsType:xfs
 #  type: fast
-#  size: 500Gi
 #  fsType: xfs
-# For best compatability set type:standard size:30Gi and leave fsType default ext4
-  type: standard
+#  size: 500Gi
+# For best compatability, use only size, which will use the default storage class
   size: 30Gi
