--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -273,7 +273,7 @@ data:
                 -q "<rpc><show><redundancy><group/></redundancy></show></rpc>" \
                 -v "//ip-address[$id]"`
         node_ip_address=`echo ${results} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
-        nr_voter_results=`curl --unix-socket /var/run/consul -s http://$node_ip_address:8500/v1/operator/raft/configuration  | python -m json.tool | grep Voter | grep true | wc -l`
+        nr_voter_results=`curl --unix-socket /var/run/solace/consul -s http://$node_ip_address:8500/v1/operator/raft/configuration  | python -m json.tool | grep Voter | grep true | wc -l`
         if [ $nr_voter_results -ne 3 ]; then
           echo "`date` INFO: ${APP}-Waiting for all 3 Consul voters to be present for node $node_ip_address, got ${nr_voter_results}"
           exit 1
