--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -204,8 +204,13 @@ data:
             --request PATCH --data "$(cat /tmp/patch_label.json)" \
             -H "Authorization: Bearer $KUBE_TOKEN" -H "Content-Type:application/json-patch+json" \
             $K8S/api/v1/namespaces/$NAMESPACE/pods/$HOSTNAME ; then
-          echo "`date` ERROR: ${APP}-Unable to update pod label, check access from pod to K8s API or RBAC authorization" >&2
-          exit 1
+          # Fall back to alternative method to update label
+          if ! curl -sSk --output /dev/null -H "Authorization: Bearer $KUBE_TOKEN" --request PATCH --data "$(cat /tmp/patch_label.json)" \
+              -H "Content-Type:application/json-patch+json" \
+              https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_PORT_443_TCP_PORT/api/v1/namespaces/$STATEFULSET_NAMESPACE/pods/$HOSTNAME ; then
+            echo "`date` ERROR: ${APP}-Unable to update pod label, check access from pod to K8s API or RBAC authorization" >&2
+            exit 1
+          fi
         fi
       fi
     }
